--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@
     padding: 0;
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
-}
+},
 body{
     min-height: 100vh;
 }
@@ -12,11 +12,12 @@ header{
     position: absolute;
     top: 0;
     left: 0;
-    width: 88%;
+    width: 100%;
     padding: 30px 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    z-index: 10000;
 }
 header ul{
     display: flex;
@@ -31,9 +32,41 @@ header ul li a{
     text-decoration: none;
     padding: 6px 15px;
     color: black;
+    border-radius: 20px;
 }
 header ul li a:hover,
 header ul lia.active{
     background: aqua;
     color: azure;
 }
+
+section{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+section img{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+section img#fondo1{
+    background-size: cover;
+}
+
+#text{
+    position: absolute;
+    white-space: nowrap;
+    font-size: 2vw;
+    z-index: 9;
+}
+
