--- a/css/styles.css
+++ b/css/styles.css
@@ -5,9 +5,11 @@
     box-sizing: border-box;
     font-family: 'Poppins', sans-serif;
 },
+
 body{
     min-height: 100vh;
 }
+
 header{
     position: absolute;
     top: 0;
@@ -19,35 +21,30 @@ header{
     align-items: center;
     z-index: 10000;
 }
+
 header ul{
     display: flex;
     justify-content: center;
     align-items: center;
 }
+
 header ul li{
     list-style: none;
     margin-left: 20px;
 }
+
 header ul li a{
     text-decoration: none;
     padding: 6px 15px;
     color: black;
     border-radius: 20px;
 }
+
 header ul li a:hover,
+
 header ul lia.active{
     background: aqua;
     color: azure;
-}
-
-section{
-    position: relative;
-    width: 100%;
-    height: 100vh;
-    padding: 100px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
 }
 
 section img{
@@ -63,10 +60,79 @@ section img#fondo1{
     background-size: cover;
 }
 
+section{
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
 #text{
     position: absolute;
     white-space: nowrap;
     font-size: 2vw;
     z-index: 9;
+    border-style: dashed;
+    padding: 20px;
+    background: lightgrey;
 }
+
+positionBoton{
+    position: relative;
+    top: 300px;
+    left: 525px;
+    white-space: nowrap;
+    font-size: 1.5vw;
+    z-index: 9;
+    border-style: solid;
+    padding: 20px;
+    border-radius: 20px;
+    background: blue;
+}
+
+positionEnvio{
+    position: relative;
+    left: -150px;
+    top: 750px;
+    white-space: nowrap;
+    font-size: 1.5vw;
+    z-index: 9;
+    border-style: dashed;
+    padding: 20px;
+    background: whitesmoke;
+}
+positionRecojo{
+    position: relative;
+    left: -150px;
+    top: 750px;
+    white-space: nowrap;
+    font-size: 1.5vw;
+    z-index: 9;
+    border-style: dashed;
+    padding: 20px;
+    background: whitesmoke;
+}
+
+section2{
+    position: relative;
+    background: palegreen;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+#text2{
+    position: relative;
+    top: -300px;
+    white-space: nowrap;
+    font-size: 2vw;
+    z-index: 9;
+}
+
+
 
