--- a/css/styles.css
+++ b/css/styles.css
@@ -205,4 +205,58 @@ diagrama5{
     background: whitesmoke;
     text-align: center;
 }
+section3{
+    position: relative;
+    background: #49d0ec;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display:flex;
+    justify-content:center;
+    align-items: center;
+}
 
+#text4{
+    position: relative;
+    top: -150px;
+    left:100px;
+    white-space: nowrap;
+    font-size: 2vw;
+    z-index: 9;
+    text-align: center;
+}
+#text5{
+    position: relative;
+    top: -100px;
+    left:-320px;
+    white-space: nowrap;
+    font-size: 1.3vw;
+    z-index: 9;
+    text-align: center;
+}
+
+diagrama6{
+    position: absolute;
+    left: 280px;
+    top: 500px;
+    white-space: nowrap;
+    font-size: 1.5vw;
+    z-index: 9;
+    border-style: dashed;
+    padding: 5px;
+    background:  whitesmoke;
+    text-align: center;
+}
+diagrama7{
+
+    position:absolute;
+    left:980px;
+    top: 500px;
+    white-space: nowrap;
+    font-size: 1.5vw;
+    z-index: 9;
+    border-style: dashed;
+    padding: 5px;
+    background: whitesmoke;
+    text-align: center;
+}
