--- a/css/styles.css
+++ b/css/styles.css
@@ -217,18 +217,16 @@ section3{
 }
 
 #text4{
-    position: relative;
-    top: -150px;
-    left:100px;
+    position: absolute;
+    top: 50px;
     white-space: nowrap;
     font-size: 2vw;
     z-index: 9;
     text-align: center;
 }
 #text5{
-    position: relative;
-    top: -100px;
-    left:-320px;
+    position: absolute;
+    top: 100px;
     white-space: nowrap;
     font-size: 1.3vw;
     z-index: 9;
@@ -236,27 +234,27 @@ section3{
 }
 
 diagrama6{
-    position: absolute;
-    left: 280px;
-    top: 500px;
+    height: 180px;
+    width: 250px;
+    position: relative;
+    left: auto;
     white-space: nowrap;
-    font-size: 1.5vw;
+    font-size: 1vw;
     z-index: 9;
     border-style: dashed;
-    padding: 5px;
+    padding: 20px;
     background:  whitesmoke;
-    text-align: center;
 }
 diagrama7{
-
-    position:absolute;
-    left:980px;
-    top: 500px;
+    height: 180px;
+    width: 250px;
+    position: relative;
+    left: auto;
     white-space: nowrap;
-    font-size: 1.5vw;
+    font-size: 1vw;
     z-index: 9;
     border-style: dashed;
-    padding: 5px;
-    background: whitesmoke;
-    text-align: center;
+    padding: 20px;
+    background:  whitesmoke;
+    margin-left: auto;
 }
