correcion 3era parte v2

--- a/css/styles.css
+++ b/css/styles.css
@@ -81,7 +81,7 @@ section{
 positionBoton{
     position: absolute;
     white-space: nowrap;
-    top: 400px;
+    top: 600px;
     font-size: 1.5vw;
     z-index: 9;
     border-style: solid;
@@ -93,9 +93,9 @@ positionBoton{
 positionEnvio{
     position: relative;
     left: auto;
-    top: 400px;
+    top: 550px;
     white-space: nowrap;
-    font-size: 1vw;
+    font-size: 1.5vw;
     z-index: 9;
     border-style: dashed;
     padding: 20px;
@@ -104,9 +104,9 @@ positionEnvio{
 positionRecojo{
     position: relative;
     left: auto;
-    top: 400px;
+    top: 550px;
     white-space: nowrap;
-    font-size: 1vw;
+    font-size: 1.5vw;
     z-index: 9;
     border-style: dashed;
     padding: 20px;
@@ -127,7 +127,7 @@ section2{
 
 #text2{
     position: absolute;
-    top: 210px;
+    top: 245px;
     white-space: nowrap;
     font-size: 2vw;
     z-index: 9;
@@ -136,7 +136,7 @@ section2{
 
 #text3{
     position: absolute;
-    top: 250px;
+    top: 300px;
     white-space: nowrap;
     font-size: 1.5vw;
     z-index: 9;
@@ -226,7 +226,7 @@ section3{
 }
 #text5{
     position: absolute;
-    top: 100px;
+    top: 150px;
     white-space: nowrap;
     font-size: 1.3vw;
     z-index: 9;
@@ -234,9 +234,9 @@ section3{
 }
 
 diagrama6{
-    height: 180px;
-    width: 250px;
-    position: relative;
+    height: 250px;
+    width: 450px;
+    position: absolute;
     left: auto;
     white-space: nowrap;
     font-size: 1vw;
@@ -244,11 +244,12 @@ diagrama6{
     border-style: dashed;
     padding: 20px;
     background:  whitesmoke;
+    margin-right: 650px;
 }
 diagrama7{
-    height: 180px;
-    width: 250px;
-    position: relative;
+    height: 250px;
+    width: 450px;
+    position: absolute;
     left: auto;
     white-space: nowrap;
     font-size: 1vw;
@@ -256,5 +257,5 @@ diagrama7{
     border-style: dashed;
     padding: 20px;
     background:  whitesmoke;
-    margin-left: auto;
+    margin-left: 650px;
 }
