--- a/css/styles.css
+++ b/css/styles.css
@@ -204,3 +204,65 @@ diagrama7{
     background:  whitesmoke;
     margin-left: 650px;
 }
+section4{
+    position: relative;
+    background: #d5fdea;
+    width: 100%;
+    height: 100vh;
+    padding: 100px;
+    display:flex;
+    justify-content:center;
+    align-items: start;
+}
+diagrama8 {
+     height: 350px;
+     width: 250px;
+     position: absolute;
+     left: auto;
+     white-space: nowrap;
+     font-size: 1vw;
+     z-index: 9;
+     border-style: dashed;
+     padding: 20px;
+     background:  whitesmoke;
+     margin-right: 650px;
+ }
+diagrama9 {
+    height: 350px;
+    width: 250px;
+    position: absolute;
+    left: auto;
+    white-space: nowrap;
+    font-size: 1vw;
+    z-index: 9;
+    border-style: dashed;
+    padding: 20px;
+    background: whitesmoke;
+    margin-right: 650px;
+}
+diagrama10 {
+    height: 350px;
+    width: 250px;
+    position: absolute;
+    left: auto;
+    white-space: nowrap;
+    font-size: 1vw;
+    z-index: 9;
+    border-style: dashed;
+    padding: 20px;
+    background: whitesmoke;
+    margin-right: 650px;
+}
+diagrama11 {
+    height: 350px;
+    width: 250px;
+    position: absolute;
+    left: auto;
+    white-space: nowrap;
+    font-size: 1vw;
+    z-index: 9;
+    border-style: dashed;
+    padding: 20px;
+    background: whitesmoke;
+    margin-right: 650px;
+}
