modificacion de la 3era con 3da

--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto+Slab:wght@300;400;600;700&display=swap');
 
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
 :root{
     --padding-container: 0px 0;
     --color-title: #001A49;
@@ -82,6 +88,7 @@ body{
     width: 30px;
 }
 
+
 .hero__container{
     max-width: 800px;
     display: grid;
@@ -108,20 +115,43 @@ body{
     border-radius: 32px;
 }
 
+
+
+
+
+.funciones{
+    background-color: palegreen;
+    content: "";
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-size: cover;
+}
+
 .function{
     text-align: center;
-    background: palegreen;
+    height: 840px;
 }
 
 .subtitle{
     color: var(--color-title);
     font-size: 2rem;
     margin-bottom: 25px;
+    padding-top: 25px;
+}
+
+.texto{
+    color: var(--color-title);
+    font-size: 1rem;
+    padding-top: 20px;
+    margin-bottom: 25px;
 }
 
 .about__function{
 
-    padding-top: 80px;
+    padding-top: 15px;
     display: grid;
     width: 90%;
     margin: 0 auto;
@@ -145,5 +175,21 @@ body{
 
 .about_diagrama{
     background-size: cover;
-    width: 50%;
+    width: 80%;
+    justify-self: center;
 }
+
+.function__container{
+    padding-top: 50px;
+    max-width: 800px;
+    display: grid;
+    --padding-container: 0;
+    display: grid;
+    grid-auto-rows: max-content;
+    align-content: center;
+    gap: 1em;
+    padding-bottom: 100px;
+    text-align: center;
+}
+
+
