--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -22,6 +22,12 @@ body{
     padding: var(--padding-container);
 }
 
+.nav__items:hover{
+    background: white;
+    border-radius: 15px;
+    padding: 5px 10px;
+}
+
 .hero{
     width: 100%;
     height: 100vh;
@@ -43,8 +49,8 @@ body{
     background-size: cover;
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0% 100%);
     z-index: -1;
-
 }
+
 
 .nav{
     --padding-container: 0;
@@ -58,6 +64,7 @@ body{
 }
 
 .nav__link{
+    transition: ease-in-out 0.5s;
     margin-left: auto;
     padding: 0;
     display: grid;
@@ -69,7 +76,6 @@ body{
 .nav__items{
     list-style: none;
 }
-
 
 
 .nav__links{
@@ -87,6 +93,11 @@ body{
     display: block;
     width: 30px;
 }
+
+.scroll{
+    height: 100px;
+}
+
 
 
 .hero__container{
@@ -128,6 +139,7 @@ body{
     width: 100%;
     height: auto;
     background-size: cover;
+    z-index: -1;
 }
 
 .function{
@@ -256,6 +268,12 @@ body{
     grid-template-columns: repeat(auto-fit, minmax(260px, auto));
 }
 
+.about__nosotros:last-of-type{
+    grid-column: 1/-1;
+}
+
+
+
 .cuadro_integrante{
     display: grid;
     gap: 1em;
@@ -283,18 +301,6 @@ body{
     height: auto;
     background-size: cover;
 }
-.about__nosotros{
-    padding-top: 40px;
-    display: grid;
-    width: 100%;
-    margin: 0 auto;
-    gap: 1em;
-    overflow: hidden;
-    grid-template-columns: repeat(auto-fit, minmax(260px, auto));
-}
-
-
-
 
 .ofrecemos{
     position: relative;
@@ -302,7 +308,7 @@ body{
     height: auto;
 }
 
-.about__nosotros{
+.about__ofrecemos{
     padding-top: 40px;
     display: grid;
     width: 100%;
@@ -310,6 +316,10 @@ body{
     gap: 1em;
     overflow: hidden;
     grid-template-columns: repeat(auto-fit, minmax(260px, auto));
+}
+
+.about__ofrecemos:last-of-type{
+    grid-column: 1/-1;
 }
 
 .cuadro_ofrecemos{
