--- a/public/assets/styles/styles.css
+++ b/public/assets/styles/styles.css
@@ -127,6 +127,85 @@ body{
     border-radius: 32px;
 }
 
+.modal{
+    width: 100%;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.modal{
+    position: fixed;
+    top:0;
+    left:0;
+    background: rgba(0,0,0,0.5);
+    transition: all 500ms ease;
+    opacity: 0;
+    visibility: hidden;
+}
+
+#btn-modal:checked ~ .modal{
+    opacity: 1;
+    visibility: visible;
+}
+
+.contenedor{
+    width: 480px;
+    height: 250px;
+    margin: auto;
+    background: #fff;
+    box-shadow: 1px 7px 25px rgba(0,0,0,0.6);
+    transition: all 500ms ease;
+    position: relative;
+}
+
+.contenedor header{
+    padding: 10px;
+    background: #8CC2F9;
+    color: #fff;
+}
+
+.contenedor label{
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    color: #fff;
+    font-size: 15px;
+    cursor: pointer;
+}
+
+#btn-modal{
+    display: none;
+}
+
+.lbl-modal{
+    color: #fff;
+    background: darkblue;
+    padding: 10px 15px;
+    border-radius: 10px;
+    cursor: pointer;
+    font-family: "Roboto Light";
+    font-size: 30px;
+}
+
+.btn-a{
+    position: revert;
+    display: inline-block;
+    margin: 30px 30px;
+    border: 18px;
+    font-size: 30px;
+    background-color: white;
+    color: Black;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+
+
+
+
 
 
 
